Add periodic pic toggle feature